name:                  amazonka-cloudhsm
version:               1.0.0
synopsis:              Amazon CloudHSM SDK.
homepage:              https://github.com/brendanhay/amazonka
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2015 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    AWS CloudHSM Service
    .
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information and sending requests.
    .
    Use of lenses is required for constructing and manipulating types.
    This is due to the amount of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.CloudHSM" and the <http://docs.aws.amazon.com/cloudhsm/latest/dg/welcome.html AWS API Reference>
    to get started.

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.AWS.CloudHSM
        , Network.AWS.CloudHSM.CreateHAPG
        , Network.AWS.CloudHSM.CreateHSM
        , Network.AWS.CloudHSM.CreateLunaClient
        , Network.AWS.CloudHSM.DeleteHAPG
        , Network.AWS.CloudHSM.DeleteHSM
        , Network.AWS.CloudHSM.DeleteLunaClient
        , Network.AWS.CloudHSM.DescribeHAPG
        , Network.AWS.CloudHSM.DescribeHSM
        , Network.AWS.CloudHSM.DescribeLunaClient
        , Network.AWS.CloudHSM.GetConfig
        , Network.AWS.CloudHSM.ListAvailableZones
        , Network.AWS.CloudHSM.ListHAPGs
        , Network.AWS.CloudHSM.ListHSMs
        , Network.AWS.CloudHSM.ListLunaClients
        , Network.AWS.CloudHSM.ModifyHAPG
        , Network.AWS.CloudHSM.ModifyHSM
        , Network.AWS.CloudHSM.ModifyLunaClient
        , Network.AWS.CloudHSM.Types
        , Network.AWS.CloudHSM.Waiters

    other-modules:
          Network.AWS.CloudHSM.Types.Product
        , Network.AWS.CloudHSM.Types.Sum

    build-depends:
          amazonka-core == 1.0.0.*
        , base          >= 4.7     && < 5

test-suite amazonka-cloudhsm-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This is not comprehensive if modules have manually been added.
    -- It exists to ensure cabal 'somewhat' detects test module changes.
    other-modules:
          Test.AWS.CloudHSM
        , Test.AWS.Gen.CloudHSM
        , Test.AWS.CloudHSM.Internal

    build-depends:
          amazonka-core == 1.0.0
        , amazonka-test == 1.0.0
        , amazonka-cloudhsm == 1.0.0
        , base
        , bytestring
        , lens
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
