name:                  amazonka-cloudhsm
version:               1.4.5
synopsis:              Amazon CloudHSM SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2016 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.CloudHSM" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.AWS.CloudHSM
        , Network.AWS.CloudHSM.AddTagsToResource
        , Network.AWS.CloudHSM.CreateHAPG
        , Network.AWS.CloudHSM.CreateHSM
        , Network.AWS.CloudHSM.CreateLunaClient
        , Network.AWS.CloudHSM.DeleteHAPG
        , Network.AWS.CloudHSM.DeleteHSM
        , Network.AWS.CloudHSM.DeleteLunaClient
        , Network.AWS.CloudHSM.DescribeHAPG
        , Network.AWS.CloudHSM.DescribeHSM
        , Network.AWS.CloudHSM.DescribeLunaClient
        , Network.AWS.CloudHSM.GetConfig
        , Network.AWS.CloudHSM.ListAvailableZones
        , Network.AWS.CloudHSM.ListHAPGs
        , Network.AWS.CloudHSM.ListHSMs
        , Network.AWS.CloudHSM.ListLunaClients
        , Network.AWS.CloudHSM.ListTagsForResource
        , Network.AWS.CloudHSM.ModifyHAPG
        , Network.AWS.CloudHSM.ModifyHSM
        , Network.AWS.CloudHSM.ModifyLunaClient
        , Network.AWS.CloudHSM.RemoveTagsFromResource
        , Network.AWS.CloudHSM.Types
        , Network.AWS.CloudHSM.Waiters

    other-modules:
          Network.AWS.CloudHSM.Types.Product
        , Network.AWS.CloudHSM.Types.Sum

    build-depends:
          amazonka-core == 1.4.5.*
        , base          >= 4.7     && < 5

test-suite amazonka-cloudhsm-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.CloudHSM
        , Test.AWS.Gen.CloudHSM
        , Test.AWS.CloudHSM.Internal

    build-depends:
          amazonka-core == 1.4.5.*
        , amazonka-test == 1.4.5.*
        , amazonka-cloudhsm == 1.4.5.*
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
