name:                  amazonka-cloudsearch-domains
version:               1.4.4
synopsis:              Amazon CloudSearch Domain SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2016 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    You use the AmazonCloudSearch2013 API to upload documents to a search domain and search those documents.

    The endpoints for submitting 
    @
    UploadDocuments
    @
    , 
    @
    Search
    @
    , and 
    @
    Suggest
    @
     requests are domain-specific. To get the endpoints for your domain, use the Amazon CloudSearch configuration service 
    @
    DescribeDomains
    @
     action. The domain endpoints are also displayed on the domain dashboard in the Amazon CloudSearch console. You submit suggest requests to the search endpoint.

    For more information, see the <http://docs.aws.amazon.com/cloudsearch/latest/developerguide Amazon CloudSearch Developer Guide>.
    .
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information and sending requests.
    .
    Use of lenses is required for constructing and manipulating types.
    This is due to the amount of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.CloudSearchDomains" or <https://aws.amazon.com/documentation/ the AWS Documentation>
    to get started.

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.AWS.CloudSearchDomains
        , Network.AWS.CloudSearchDomains.Search
        , Network.AWS.CloudSearchDomains.Suggest
        , Network.AWS.CloudSearchDomains.Types
        , Network.AWS.CloudSearchDomains.UploadDocuments
        , Network.AWS.CloudSearchDomains.Waiters

    other-modules:
          Network.AWS.CloudSearchDomains.Types.Product
        , Network.AWS.CloudSearchDomains.Types.Sum

    build-depends:
          amazonka-core == 1.4.4.*
        , base          >= 4.7     && < 5

test-suite amazonka-cloudsearch-domains-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.CloudSearchDomains
        , Test.AWS.Gen.CloudSearchDomains
        , Test.AWS.CloudSearchDomains.Internal

    build-depends:
          amazonka-core == 1.4.4.*
        , amazonka-test == 1.4.4.*
        , amazonka-cloudsearch-domains == 1.4.4.*
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
