cabal-version:      2.2
name:               amazonka-cloudsearch-domains
version:            1.6.1
synopsis:           Amazon CloudSearch Domain SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           AWS
build-type:         Simple
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  Derived from API version @2013-01-01@ of the AWS service descriptions, licensed under Apache 2.0.
  .
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests, and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.CloudSearchDomains.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.CloudSearchDomains" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-cloudsearch-domains

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.CloudSearchDomains
    Network.AWS.CloudSearchDomains.Lens
    Network.AWS.CloudSearchDomains.Search
    Network.AWS.CloudSearchDomains.Suggest
    Network.AWS.CloudSearchDomains.Types
    Network.AWS.CloudSearchDomains.Types.Bucket
    Network.AWS.CloudSearchDomains.Types.BucketInfo
    Network.AWS.CloudSearchDomains.Types.ContentType
    Network.AWS.CloudSearchDomains.Types.DocumentServiceWarning
    Network.AWS.CloudSearchDomains.Types.FieldStats
    Network.AWS.CloudSearchDomains.Types.Hit
    Network.AWS.CloudSearchDomains.Types.Hits
    Network.AWS.CloudSearchDomains.Types.QueryParser
    Network.AWS.CloudSearchDomains.Types.SearchStatus
    Network.AWS.CloudSearchDomains.Types.SuggestionMatch
    Network.AWS.CloudSearchDomains.Types.SuggestModel
    Network.AWS.CloudSearchDomains.Types.SuggestStatus
    Network.AWS.CloudSearchDomains.UploadDocuments
    Network.AWS.CloudSearchDomains.Waiters

  reexported-modules: Network.AWS
  build-depends:
    , amazonka  >=1.6.1 && <1.6.2
    , base      >=4.12  && <5

test-suite amazonka-cloudsearch-domains-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.CloudSearchDomains
    Test.AWS.CloudSearchDomains.Internal
    Test.AWS.Gen.CloudSearchDomains

  build-depends:
    , amazonka                      >=1.6.1 && <1.6.2
    , amazonka-cloudsearch-domains
    , amazonka-test                 >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
