name:                  amazonka-cloudsearch
version:               1.4.5
synopsis:              Amazon CloudSearch SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2016 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.CloudSearch" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.AWS.CloudSearch
        , Network.AWS.CloudSearch.BuildSuggesters
        , Network.AWS.CloudSearch.CreateDomain
        , Network.AWS.CloudSearch.DefineAnalysisScheme
        , Network.AWS.CloudSearch.DefineExpression
        , Network.AWS.CloudSearch.DefineIndexField
        , Network.AWS.CloudSearch.DefineSuggester
        , Network.AWS.CloudSearch.DeleteAnalysisScheme
        , Network.AWS.CloudSearch.DeleteDomain
        , Network.AWS.CloudSearch.DeleteExpression
        , Network.AWS.CloudSearch.DeleteIndexField
        , Network.AWS.CloudSearch.DeleteSuggester
        , Network.AWS.CloudSearch.DescribeAnalysisSchemes
        , Network.AWS.CloudSearch.DescribeAvailabilityOptions
        , Network.AWS.CloudSearch.DescribeDomains
        , Network.AWS.CloudSearch.DescribeExpressions
        , Network.AWS.CloudSearch.DescribeIndexFields
        , Network.AWS.CloudSearch.DescribeScalingParameters
        , Network.AWS.CloudSearch.DescribeServiceAccessPolicies
        , Network.AWS.CloudSearch.DescribeSuggesters
        , Network.AWS.CloudSearch.IndexDocuments
        , Network.AWS.CloudSearch.ListDomainNames
        , Network.AWS.CloudSearch.Types
        , Network.AWS.CloudSearch.UpdateAvailabilityOptions
        , Network.AWS.CloudSearch.UpdateScalingParameters
        , Network.AWS.CloudSearch.UpdateServiceAccessPolicies
        , Network.AWS.CloudSearch.Waiters

    other-modules:
          Network.AWS.CloudSearch.Types.Product
        , Network.AWS.CloudSearch.Types.Sum

    build-depends:
          amazonka-core == 1.4.5.*
        , base          >= 4.7     && < 5

test-suite amazonka-cloudsearch-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.CloudSearch
        , Test.AWS.Gen.CloudSearch
        , Test.AWS.CloudSearch.Internal

    build-depends:
          amazonka-core == 1.4.5.*
        , amazonka-test == 1.4.5.*
        , amazonka-cloudsearch == 1.4.5.*
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
