name:                  amazonka-cloudtrail
version:               1.4.4
synopsis:              Amazon CloudTrail SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2016 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    AWS CloudTrail

    This is the CloudTrail API Reference. It provides descriptions of actions, data types, common parameters, and common errors for CloudTrail.

    CloudTrail is a web service that records AWS API calls for your AWS account and delivers log files to an Amazon S3 bucket. The recorded information includes the identity of the user, the start time of the AWS API call, the source IP address, the request parameters, and the response elements returned by the service.

    As an alternative to the API, you can use one of the AWS SDKs, which consist of libraries and sample code for various programming languages and platforms (Java, Ruby, .NET, iOS, Android, etc.). The SDKs provide a convenient way to create programmatic access to AWSCloudTrail. For example, the SDKs take care of cryptographically signing requests, managing errors, and retrying requests automatically. For information about the AWS SDKs, including how to download and install them, see the <http://aws.amazon.com/tools/ Tools for Amazon Web Services page>.

    See the CloudTrail User Guide for information about the data that is included with each AWS API call listed in the log files.
    .
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information and sending requests.
    .
    Use of lenses is required for constructing and manipulating types.
    This is due to the amount of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.CloudTrail" or <https://aws.amazon.com/documentation/ the AWS Documentation>
    to get started.

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.AWS.CloudTrail
        , Network.AWS.CloudTrail.AddTags
        , Network.AWS.CloudTrail.CreateTrail
        , Network.AWS.CloudTrail.DeleteTrail
        , Network.AWS.CloudTrail.DescribeTrails
        , Network.AWS.CloudTrail.GetTrailStatus
        , Network.AWS.CloudTrail.ListPublicKeys
        , Network.AWS.CloudTrail.ListTags
        , Network.AWS.CloudTrail.LookupEvents
        , Network.AWS.CloudTrail.RemoveTags
        , Network.AWS.CloudTrail.StartLogging
        , Network.AWS.CloudTrail.StopLogging
        , Network.AWS.CloudTrail.Types
        , Network.AWS.CloudTrail.UpdateTrail
        , Network.AWS.CloudTrail.Waiters

    other-modules:
          Network.AWS.CloudTrail.Types.Product
        , Network.AWS.CloudTrail.Types.Sum

    build-depends:
          amazonka-core == 1.4.4.*
        , base          >= 4.7     && < 5

test-suite amazonka-cloudtrail-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.CloudTrail
        , Test.AWS.Gen.CloudTrail
        , Test.AWS.CloudTrail.Internal

    build-depends:
          amazonka-core == 1.4.4.*
        , amazonka-test == 1.4.4.*
        , amazonka-cloudtrail == 1.4.4.*
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
