name:                  amazonka-cloudtrail
version:               1.5.0
synopsis:              Amazon CloudTrail SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2017 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.CloudTrail" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-cloudtrail

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.CloudTrail
        , Network.AWS.CloudTrail.AddTags
        , Network.AWS.CloudTrail.CreateTrail
        , Network.AWS.CloudTrail.DeleteTrail
        , Network.AWS.CloudTrail.DescribeTrails
        , Network.AWS.CloudTrail.GetEventSelectors
        , Network.AWS.CloudTrail.GetTrailStatus
        , Network.AWS.CloudTrail.ListPublicKeys
        , Network.AWS.CloudTrail.ListTags
        , Network.AWS.CloudTrail.LookupEvents
        , Network.AWS.CloudTrail.PutEventSelectors
        , Network.AWS.CloudTrail.RemoveTags
        , Network.AWS.CloudTrail.StartLogging
        , Network.AWS.CloudTrail.StopLogging
        , Network.AWS.CloudTrail.Types
        , Network.AWS.CloudTrail.UpdateTrail
        , Network.AWS.CloudTrail.Waiters

    other-modules:
          Network.AWS.CloudTrail.Types.Product
        , Network.AWS.CloudTrail.Types.Sum

    build-depends:
          amazonka-core == 1.5.0.*
        , base          >= 4.7     && < 5

test-suite amazonka-cloudtrail-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.CloudTrail
        , Test.AWS.Gen.CloudTrail
        , Test.AWS.CloudTrail.Internal

    build-depends:
          amazonka-core == 1.5.0.*
        , amazonka-test == 1.5.0.*
        , amazonka-cloudtrail
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
